--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.example.submission_3">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <permission
         android:name="com.example.submission_3.READ_DATABASE"
         android:protectionLevel="normal" />
@@ -19,8 +21,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".settings.SettingsActivity"></activity>
-         <receiver android:name=".favoritewidget.FavouriteWidget">
+        <activity android:name=".SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".settings.SettingsActivity" />
+
+        <receiver android:name=".favoritewidget.FavouriteWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -36,28 +47,30 @@
             android:exported="true"
             android:readPermission="com.example.submission_3.READ_DATABASE"
             android:writePermission="com.example.submission_3.WRITE_DATABASE" />
-        <receiver android:name=".reminder.DailyReminder"
-            android:exported="false"
-            android:enabled="true"
-            />
-        <receiver android:name=".reminder.UpcomingReminder"
-            android:exported="true"
-            android:enabled="true"/>
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+        <receiver
+            android:name=".reminder.DailyReminder"
+            android:enabled="true"
+            android:exported="false" />
+        <receiver
+            android:name=".reminder.UpcomingReminder"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
-        </activity>
+        </receiver>
+
+        <activity android:name=".DetailActivity" />
+        <activity android:name=".MainActivity"/>
+
+
 
         <service
             android:name=".favoritewidget.StackWidgetService"
             android:authorities="com.example.submission_3"
             android:exported="false"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
-
     </application>
 
 </manifest>
